2002-06-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/file_database.py (FileDatabase.GetRoot): New method.
	(FileDatabase._GetPathFromLabel): Use it.
	(ExtensionDatabase.GetSuitePath): Likewise.
	(ExtensionDatabase._IsSuiteFile): Likewise.
	(ExtensionDatabase._GetPathFromLabel): Likewise.

	* qm/test/file_database.py (ExtensionDatabase): New class, split
	out from ...
	(FileDatabase): ... here.
	* qm/test/xmldb.py (Database): Use 'ExtensionDatabase' as the
	immediate base class.
	(Database.__init__): Adjust accordingly.
	
	* qm/common.py (timegm): Remove.

2002-06-24  Zack Weinberg  <zack@codesourcery.com>

	* share/diagnostics/common.txt: Add entry for "dependency cycle".
	* qm/test/execution_engine.py (class ExecutionEngine): Implement
	dependency-cycle detection.

2002-06-21  Zack Weinberg  <zack@codesourcery.com>

	* qm/platform_unix.py: Use URL quoting convention (%xx) to escape
	single quotes.

2002-06-19  Zack Weinberg  <zack@codesourcery.com>

	* qm/xmlutil.py: Use xml.dom.minidom.getDOMImplementation() so
	that writexml() will work when xmlplus is installed.

2002-06-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (sequence_difference): Remove.
	(make_map_from_list): Likewise.
	(purge_keys): Likewise.
	* qm/test/file_database.py (FileDatabase._GetLabels): Use
	JoinLabels, not qm.label.join.
	* qm/test/share/dir.dtml: Remove insertion of "." before test name.

2002-06-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (MethodShouldBeOverriddenError): Remove.
	* qm/test/qmtest.py: Handle NotImplementedError specially.
	* qm/test/share/messages/diagnostics.txt (not implemented): New
	error message.
	* qm/attachment.py: Use NotImplementedError, not
	MethodShouldBeOverriddenError.
	* qm/fields.py: Likewise.
	* qm/user.py: Likewise.
	* qm/test/command_thread.py: Likewise.
	* qm/test/database.py: Likewise.
	* qm/test/file_database.py: Likewise.
	* qm/test/resource.py: Likewise.
	* qm/test/result_stream.py: Likewise.