@@ -1,3 +1,10 @@
+2002-06-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/test/file_database.py (FileDatabase.GetTestPath): Fix typo.
+	(FileDatabase._GetLabelFromBasename): New method.
+	(FileDatabase._GetLabels): Use it.
+	(ExtensionDatabase._GetLabelFromBasename): New method.
+	
 2002-06-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/file_database.py (FileDatabase.GetRoot): New method.
